<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_2"
        android:textSize="18sp"
        android:padding="5dp"
        fontPath="Montserrat-Bold.ttf"
        tools:ignore="MissingPrefix"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_pink"
            android:text="@string/tx_1"
            android:textSize="16sp"
            android:textColor="#FFF"
            fontPath="Montserrat-Bold.ttf"
            tools:ignore="MissingPrefix"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abrir_instagram"
            android:textSize="18sp"
        android:padding="5dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="270dp"
            android:layout_height="200dp"
            android:background="@drawable/info1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compartilhar"
            fontPath="Montserrat-Bold.ttf"
            tools:ignore="MissingPrefix"
            android:layout_marginTop="140dp"
            android:layout_marginStart="35dp"/-->
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_pink"
            android:text="@string/tx_2"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abrir_instadownloader"
            android:textSize="18sp"
            android:padding="5dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="270dp"
        android:layout_height="200dp"
        android:background="@drawable/info2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
</LinearLayout>