<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"/>

    <LinearLayout
        android:id="@+id/menu_container_itens"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:background="@drawable/borda_redonda_white_menu"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcoes"
                android:textColor="@color/pink"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close"
                android:tint="@color/pink" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:visibility="gone"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_share"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_share"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/txt_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compartilhar"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_ir_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_ir_instagram"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_public"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/txt_ir_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_no_instagram"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_repost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:visibility="gone"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_repost"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_repeat"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/txt_repost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repostar"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_delete"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excluir"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_copyUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_copyUrl"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_link"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/txt_copyUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copiar_url"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/menu_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_download"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="@dimen/icon_menu"
                android:src="@drawable/ic_file_download"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/txt_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baixar_novamente"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>