<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <FrameLayout
            android:id="@+id/vg_avaliar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_thumb_up"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/avaliar"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/vg_compartilhar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            >
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/compartilhar"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/vg_premium"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_stars"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/premium"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
<!--            <TextView-->
<!--                android:id="@+id/price"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="R$0,00"-->
<!--            android:background="@drawable/borda_redonda_pink"-->
<!--            android:layout_gravity="right|center_vertical"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:paddingStart="10dp"-->
<!--                android:paddingEnd="10dp"-->
<!--                android:paddingTop="5dp"-->
<!--                android:paddingBottom="5dp"-->
<!--            android:textColor="#FFF"/>-->
        </FrameLayout>

        <FrameLayout
            android:id="@+id/vg_reativar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:visibility="visible">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_stars"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/ja_sou_premium"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/vg_mais_apps"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_dashboard_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/mais_apps"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/vg_feedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/email_ao_desenvolvedor"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:tint="@color/pink"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"
                tools:ignore="UseAppTint" />
        </FrameLayout>

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/vg_status_saver"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:background="@drawable/icon_status_saver"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AD"
                android:textColor="#FFF"
                android:background="@color/cinza_escuro"
                android:textSize="10sp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/salvar_status_do_whatsapp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"
                app:tint="@color/pink" />
        </FrameLayout>

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/vg_sticker_maker"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:background="@drawable/icon_sticker_maker"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AD"
                android:textColor="#FFF"
                android:background="@color/cinza_escuro"
                android:textSize="10sp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/sticker_maker"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="42dp"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:alpha="0.7"
                android:src="@drawable/ic_chevron_right"
                app:tint="@color/pink" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>